# aprendendo-OpenCL

./: CMakeLists.txt  README.md  arguments.c  arguments.h  main.c
.github/workflows/: cmake.yml  linux.yml
OpenCL/: device.c  device.h  error.h  platform.c  platform.h
include/: device.h  error.h  platform.h  set.h
mathematics/: set.h  vector.h
src/: arguments.c  device.c  main.c  platform.c
